Revision history for Mason

** marks an incompatible change

2.08  Apr 25, 2011

* Fixes
  - Really fix compatibility with JSON version 1.x

2.07  Apr 21, 2011

* Improvements
  - Allow arguments to be passed to the content sub from a dynamic filter (e.g. CompCall)
  - Throw error on unmatched %> or &>
  - Fix error line numbers after method sections and multiple text sections

* Fixes
  - Prevent false inheritance loops when component overrides its default parent (Jozef Mojzis)
  - Fix compatibility with JSON version 1.x

* Other
  - Only generate version numbers for .pm files with documentation, to reduce inter-version churn

2.06  Mar 14, 2011

* Fixes
  - Use new file extensions in eg/blog (Jozef Mojzis)

2.05  Mar 6, 2011

** Incompatible changes
  - Change default component file extensions due to conflict with Objective C's .m
    (suggested by jomo). New extensions:
    .mc - top-level component
    .mi - internal component
    .mp - pure-perl component

* Fixes
  - Require comp_root parameter to Mason->new (cxreg)
  - Require that request path is absolute
  - Ignore whitespace at beginning of a <%args> and <%shared> line (cxreg)

* Improvements
  - Forbid reserved names such as 'cmeta' in new method and attribute declarations
  - Improve error message when request path not found - list all component paths searched

* Testing
  - Stop using test counts - see http://bit.ly/eISu3R

* Documentation
  - Add Mason/Manual/Intro.pod

2.04  Feb 26, 2011

* Fixes
  - Fix broken $m->scomp (Tomohiro Hosaka)

* Testing
  - Add a pile of tests to fill in coverage gaps

2.03  Feb 24, 2011

* Improvements
  - Add -e option to bin/mason

* Fixes
  - Depend on Log::Any 0.08, for Log::Any::Test (David Wheeler)

2.02  Feb 24, 2011

* Fixes
  - Allow index file (index.m, index.pm) to be accessed directly with /index path (Matthias Dietrich)
  - Fix error line # for invalid attribute
  - Include HTMLFilters in eg/blog/install.sh (qiuhw)