@@ -5,7 +5,9 @@ Revision history for Mason
 2.08  Apr 25, 2011
 
 * Fixes
+  - Fix $. notation inside <& &>
   - Really fix compatibility with JSON version 1.x
+  - Untaint component source when in taint mode as in Mason 1, otherwise compiler regexes may fail
 
 2.07  Apr 21, 2011
 
